# photo-sync

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/photo_sync/: __init__.py  config.py  exceptions.py  exporter.py  git.py  mapper.py  path.py  provider.py  state.py
src/photo_sync/cli/: init.py  list_albums.py  main.py  push.py  status.py  sync.py
src/photo_sync/providers/: apple.py
tests/: conftest.py  test_config.py  test_exporter.py  test_mapper.py  test_path.py  test_state.py
tests/fixtures/: sample_config.toml
